--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,1 +1,23 @@
 
+workflows:
+  fintunes-test:
+    name: Fintunes Test Build
+    instance_type: mac_mini  # Mac required for iOS
+    max_build_duration: 60
+    environment:
+      flutter: stable
+      node: latest
+      cocoapods: default
+    scripts:
+      - name: Install dependencies
+        script: |
+          pnpm install
+      - name: Run Android build
+        script: |
+          pnpm android --release
+      - name: Run iOS build
+        script: |
+          pnpm ios --release
+    artifacts:
+      - build/app/outputs/flutter-apk/*.apk
+      - build/ios/iphoneos/*.ipa
