--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,7 +2,7 @@
 workflows:
   fintunes-test:
     name: Fintunes Test Build
-    instance_type: mac_mini  # Mac required for iOS
+    instance_type: mac
     max_build_duration: 60
     environment:
       flutter: stable
