--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -10,7 +10,7 @@ workflows:
     scripts:
       - name: Install dependencies
         script: |
-          pnpm install
+          yarn install
       - name: Build Android
         script: |
           pnpm android --release
