--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -14,10 +14,24 @@ workflows:
           # Remove immutable setting temporarily and install
           yarn config set enableImmutableInstalls false
           yarn install
+      - name: Check available scripts
+        script: |
+          cd $CM_PROJECT_DIR
+          echo "Available yarn scripts:"
+          yarn run --help 2>/dev/null || true
+          echo "Package.json scripts:"
+          cat package.json | grep -A 20 '"scripts"' || true
       - name: Build iOS
         script: |
           cd $CM_PROJECT_DIR
-          yarn ios --release
+          # Try different approaches to build iOS
+          if yarn run ios --help > /dev/null 2>&1; then
+            yarn run ios --configuration Release
+          elif command -v npx > /dev/null 2>&1; then
+            npx react-native run-ios --configuration Release
+          else
+            echo "No iOS build method found"
+            exit 1
+          fi
     artifacts:
-      - build/app/outputs/flutter-apk/*.apk
       - build/ios/iphoneos/*.ipa
